2002-12-24  Bruno Haible  <bruno@clisp.org>

	* setenv.m4 (gt_FUNC_SETENV): New macro.
	(gt_CHECK_VAR_DECL): Fix quoting error that led to infinite loop in m4
	when invoked twice.
	(gt_PREREQ_SETENV, gt_PREREQ_UNSETENV): New macros, replacing old
	gt_FUNC_SETENV.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4: Replace with the version from gnulib, without
	AC_HEADER_STDBOOL.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add extensions.m4.

2003-08-08  Paul Eggert  <eggert@twinsun.com>

	* extensions.m4: New file.
	* unlocked-io.m4 (jm_FUNC_GLIBC_UNLOCKED_IO):
	Require gl_USE_SYSTEM_EXTENSIONS rather than AC_GNU_SOURCE.

2003-07-01  Paul Eggert  <eggert@twinsun.com>

	* xreadlink.m4 (gl_XREADLINK): Don't check for sys/types.h, since
	xreadlink.c now includes it unconditionally.

2003-08-16  Paul Eggert  <eggert@twinsun.com>

	* readlink.m4 (gl_PREREQ_READLINK): Renamed from gl_PREREQ_READLINE,
	fixing a typo.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* readlink.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* ssize_t.m4 (gt_TYPE_SSIZE_T): Don't include <unistd.h>. <sys/types.h>
	should be sufficient.
	Reported by Paul Eggert.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* backupfile.m4 (gt_PREREQ_BACKUPFILE): Remove limits.h check.

2003-05-28  Paul Eggert  <eggert@twinsun.com>

	* pathmax.m4 (gl_PATHMAX): Don't check for limits.h.
	* xreadlink.m4 (gl_XREADLINK): Likewise.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	Portability to mingw32.
	* ssize_t.m4 (gt_TYPE_SSIZE_T): Test for unistd.h.
	* xreadlink.m4 (gl_XREADLINK): Require gt_TYPE_SSIZE_T.
	Reported by Jeff Bonggren <jbon@cfl.rr.com>.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (aclocal_DATA): Add intmax.m4, longdouble.m4,
	longlong.m4, printf-posix.m4, signed.m4, wchar_t.m4, wint_t.m4.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* locale-fr.m4: New file.