@@ -1,3 +1,7 @@
+2003-08-23  Bruno Haible  <bruno@clisp.org>
+
+	* fnmatch.m4: Replace with the version from gnulib.
+
 2002-12-24  Bruno Haible  <bruno@clisp.org>
 
 	* setenv.m4 (gt_FUNC_SETENV): New macro.
